--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox spacing="10" alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
-    <TextField fx:id="usernameField" promptText="Enter your username"/>
-    <TextField fx:id="chatroomField" promptText="Enter chat room"/>
-    <Button text="Connect" onAction="#handleConnectAction"/>
-    <TextField fx:id="messageField" promptText="Enter message here"/>
-    <Button text="Send" onAction="#handleSendAction"/>
-    <TextArea fx:id="messageArea" editable="false"/>
+<VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="dk.dtu.controller.AppController">
+   <HBox>
+      <children>
+         <VBox>
+            <children>
+                <TextField fx:id="usernameField" promptText="Enter your username" />
+                <TextField fx:id="chatroomField" promptText="Enter chat room" />
+                <Button onAction="#handleConnectAction" text="Connect" />
+                <TextField fx:id="messageField" promptText="Enter message here" />
+                <Button onAction="#handleSendAction" text="Send" />
+                <TextArea fx:id="messageArea" editable="false" />
+            </children>
+         </VBox>
+         <TextArea prefHeight="200.0" prefWidth="200.0" />
+      </children>
+   </HBox>
 </VBox>
