--- a/src/main/resources/dk/dtu/view/PopUpID.fxml
+++ b/src/main/resources/dk/dtu/view/PopUpID.fxml
@@ -3,13 +3,19 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-      prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="dk.dtu.controller.StartController">
-   <Label text="Write IP Of your game"/>
-   <TextField fx:id="IpField"/>
-   <Button fx:id="JoinGameIP" mnemonicParsing="false" onAction="#JoinGameBasedOnIP" text="JoinGame"/>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="dk.dtu.controller.StartController">
+   <AnchorPane prefHeight="200.0" prefWidth="200.0">
+      <children>
+         <VBox layoutX="226.0" layoutY="153.0">
+            <children>
+               <Label text="Write IP Of your game" />
+               <TextField fx:id="IpField" />
+               <Button fx:id="JoinGameIP" mnemonicParsing="false" onAction="#JoinGameBasedOnIP" text="JoinGame" />
+            </children>
+         </VBox>
+      </children>
+   </AnchorPane>
 </VBox>
