--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
@@ -19,7 +20,12 @@
                 <TextArea fx:id="messageArea" editable="false" />
             </children>
          </VBox>
-         <TextArea fx:id="usernameList" editable="false" prefHeight="200.0" prefWidth="200.0" />
+         <VBox>
+            <children>
+               <Label text="Usernames:" />
+               <TextArea fx:id="usernameList" editable="false" prefWidth="300.0" />
+            </children>
+         </VBox>
       </children>
    </HBox>
 </VBox>
