--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -1,31 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 
-<VBox alignment="CENTER" spacing="10" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
-   <HBox>
-      <children>
-         <VBox>
-            <children>
-                <TextField fx:id="usernameField" promptText="Enter your username" />
-                <TextField fx:id="chatroomField" promptText="Enter chat room" text="lobby" />
-                <Button onAction="#handleConnectAction" text="Connect" />
-                <TextField fx:id="messageField" promptText="Enter message here" />
-                <Button onAction="#handleSendAction" text="Send" />
-                <TextArea fx:id="messageArea" editable="false" />
-            </children>
-         </VBox>
-         <VBox>
-            <children>
-               <Label text="Usernames:" />
-               <TextArea fx:id="usernameList" editable="false" prefWidth="300.0" />
-            </children>
-         </VBox>
-      </children>
-   </HBox>
-</VBox>
+<Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
+<children>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" stroke="BLACK" strokeType="INSIDE" width="302.0" />
+    <ImageView fitHeight="521.0" fitWidth="746.0">
+        <image>
+            <Image url="@Images/Moonlit_main_page.jpg" />
+        </image>
+    </ImageView>
+    <VBox layoutY="358.0" prefHeight="153.0" prefWidth="208.0">
+        <children>
+            <TextField fx:id="usernameField" promptText="Enter your username" />
+            <TextField fx:id="chatroomField" promptText="Enter chat room" text="lobby" />
+            <Button onAction="#handleConnectAction" prefHeight="25.0" prefWidth="223.0" text="Connect" />
+            <TextField fx:id="messageField" promptText="Enter message here" />
+            <Button onAction="#handleSendAction" prefHeight="25.0" prefWidth="296.0" text="Send" />
+            <TextArea fx:id="messageArea" editable="false" />
+        </children>
+    </VBox>
+    <VBox layoutX="602.0" prefHeight="153.0" prefWidth="144.0">
+        <children>
+            <TextField text="Usernames:" />
+            <TextArea fx:id="usernameList" editable="false" prefWidth="200.0" />
+        </children>
+    </VBox>
+    <VBox prefHeight="128.0" prefWidth="144.0">
+        <children>
+            <TextField text="Status" />
+            <TextArea prefHeight="200.0" prefWidth="200.0" />
+        </children>
+    </VBox>
+    <VBox layoutX="547.0" layoutY="403.0" prefHeight="118.0" prefWidth="199.0">
+        <children>
+            <TextField />
+            <TextArea prefHeight="200.0" prefWidth="200.0" />
+        </children>
+    </VBox>
+</children>
+</Pane>
