--- a/src/main/resources/dk/dtu/view/background.fxml
+++ b/src/main/resources/dk/dtu/view/background.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<Pane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<Pane xmlns="http://javafx.com/javafx/19">
    <children>
       <ImageView fitHeight="484.0" fitWidth="746.0">
          <image>
