--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -45,5 +46,6 @@
             <TextArea prefHeight="200.0" prefWidth="200.0" />
         </children>
     </VBox>
+    <Label fx:id="timerLabel" layoutX="230.0" layoutY="210.0" text="02:00" />
 </children>
 </Pane>
