--- a/src/main/resources/dk/dtu/view/PopUpID.fxml
+++ b/src/main/resources/dk/dtu/view/PopUpID.fxml
@@ -5,8 +5,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="dk.dtu.controller.StartController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.StartController">
    <AnchorPane prefHeight="200.0" prefWidth="200.0">
       <children>
          <VBox layoutX="226.0" layoutY="153.0">
@@ -16,6 +19,15 @@
                <Button fx:id="JoinGameIP" mnemonicParsing="false" onAction="#JoinGameBasedOnIP" text="JoinGame" />
             </children>
          </VBox>
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#100447" height="49.0" layoutX="451.0" stroke="BLACK" strokeType="INSIDE" width="149.0" />
+         <Text fill="#7d0000" layoutX="451.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Return" textAlignment="CENTER" wrappingWidth="148.57142857142856">
+            <font>
+               <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
+            </font>
+         </Text>
+         <Rectangle id="joinGameRectangle" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="65.0" layoutX="115.0" layoutY="46.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
+         <Text layoutX="192.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Join" />
+         <TextField layoutX="389.0" layoutY="110.0" promptText="Enter username" />
       </children>
    </AnchorPane>
 </VBox>
