--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -8,7 +8,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
 <children>
@@ -18,23 +21,23 @@
             <Image url="@Images/Moonlit_main_page.jpg" />
         </image>
     </ImageView>
-    <VBox layoutY="358.0" prefHeight="153.0" prefWidth="208.0">
+    <VBox layoutY="310.0" prefHeight="211.0" prefWidth="255.0">
         <children>
             <TextField fx:id="usernameField" promptText="Enter your username" />
             <TextField fx:id="chatroomField" promptText="Enter chat room" text="lobby" />
-            <Button onAction="#handleConnectAction" prefHeight="25.0" prefWidth="223.0" text="Connect" />
+            <Button onAction="#handleConnectAction" prefHeight="25.0" prefWidth="269.0" text="Connect" />
             <TextField fx:id="messageField" promptText="Enter message here" />
             <Button onAction="#handleSendAction" prefHeight="25.0" prefWidth="296.0" text="Send" />
             <TextArea fx:id="messageArea" editable="false" />
         </children>
     </VBox>
-    <VBox layoutX="602.0" prefHeight="153.0" prefWidth="144.0">
+    <VBox layoutX="588.0" layoutY="95.0" prefHeight="211.0" prefWidth="144.0">
         <children>
             <TextField text="Usernames:" />
-            <TextArea fx:id="usernameList" editable="false" prefWidth="200.0" />
+            <TextArea fx:id="usernameList" editable="false" prefHeight="213.0" prefWidth="144.0" />
         </children>
     </VBox>
-    <VBox prefHeight="128.0" prefWidth="144.0">
+    <VBox layoutX="14.0" layoutY="142.0" prefHeight="153.0" prefWidth="144.0">
         <children>
             <TextField text="Status" />
             <TextArea prefHeight="200.0" prefWidth="200.0" />
@@ -46,6 +49,16 @@
             <TextArea prefHeight="200.0" prefWidth="200.0" />
         </children>
     </VBox>
-    <Label fx:id="timerLabel" layoutX="230.0" layoutY="210.0" text="02:00" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#06223b" height="45.0" layoutX="603.0" stroke="BLACK" strokeType="INSIDE" width="144.0" />
+      <Text fill="#7f0000" layoutX="630.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" textAlignment="CENTER" wrappingWidth="90.552001953125">
+         <font>
+            <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
+         </font>
+      </Text>
+      <Circle fill="WHITE" layoutX="80.0" layoutY="63.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
+    <Label fx:id="timerLabel" layoutX="54.0" layoutY="51.0" text="02:00">
+         <font>
+            <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
+         </font></Label>
 </children>
 </Pane>
