--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -55,7 +54,11 @@
             <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
          </font>
       </Text>
-      <Circle fill="WHITE" layoutX="80.0" layoutY="63.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
+      <ImageView fx:id="counter" fitHeight="225.0" fitWidth="290.0" layoutX="-60.0" layoutY="-48.0">
+         <image>
+            <Image url="@Images/sun.png" />
+         </image>
+      </ImageView>
     <Label fx:id="timerLabel" layoutX="54.0" layoutY="51.0" text="02:00">
          <font>
             <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
