--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
 <children>
@@ -32,13 +32,13 @@
     </VBox>
     <VBox layoutX="588.0" layoutY="95.0" prefHeight="211.0" prefWidth="144.0">
         <children>
-            <Label text="Usernames:" style="-fx-background-color: #FFFFFF;"/>
+            <Label style="-fx-background-color: #FFFFFF;" text="Usernames:" />
             <TextArea fx:id="usernameList" editable="false" prefHeight="213.0" prefWidth="144.0" />
         </children>
     </VBox>
     <VBox layoutX="14.0" layoutY="142.0" prefHeight="153.0" prefWidth="144.0">
         <children>
-            <TextField text="Status" editable="false" />
+            <TextField editable="false" text="Status" />
             <TextArea prefHeight="200.0" prefWidth="200.0" />
         </children>
     </VBox>
@@ -48,18 +48,20 @@
             <TextArea prefHeight="200.0" prefWidth="200.0" />
         </children>
     </VBox>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#06223b" height="45.0" layoutX="603.0" stroke="BLACK" strokeType="INSIDE" width="144.0" />
-      <Text fill="#7f0000" layoutX="630.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" textAlignment="CENTER" wrappingWidth="90.552001953125">
-         <font>
-            <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
-         </font>
-      </Text>
+    <AnchorPane fx:id="settings" layoutX="588.0" layoutY="14.0" onMouseClicked="#returnToMenu" prefHeight="51.0" prefWidth="115.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#06223b" height="51.0" layoutY="1.0" stroke="BLACK" strokeType="INSIDE" width="144.0" />
+        <Label layoutX="41.0" layoutY="13.0" prefHeight="25.0" prefWidth="61.0" text="Return" textFill="#9d0101">
+            <font>
+                <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
+            </font>
+        </Label>
+    </AnchorPane>
       <ImageView fx:id="counter" fitHeight="225.0" fitWidth="290.0" layoutX="-60.0" layoutY="-48.0">
          <image>
             <Image url="@Images/sun.png" />
          </image>
       </ImageView>
-    <Label fx:id="timerLabel" layoutX="60.0" layoutY="52.0" text="02:00">
+    <Label fx:id="timerLabel" layoutX="60.0" layoutY="52.0" >
          <font>
             <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
          </font></Label>
