--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
+<Pane prefHeight="521.0" prefWidth="746.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
 <children>
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" stroke="BLACK" strokeType="INSIDE" width="302.0" />
     <ImageView fx:id="background" fitHeight="521.0" fitWidth="746.0">
@@ -22,9 +22,6 @@
     </ImageView>
     <VBox layoutY="310.0" prefHeight="211.0" prefWidth="255.0">
         <children>
-            <TextField fx:id="usernameField" promptText="Enter your username" />
-            <TextField fx:id="chatroomField" promptText="Enter chat room" />
-            <Button onAction="#handleConnectAction" prefHeight="25.0" prefWidth="269.0" text="Connect" />
             <TextField fx:id="messageField" promptText="Enter message here" />
             <Button onAction="#handleSendAction" prefHeight="25.0" prefWidth="296.0" text="Send" />
             <TextArea fx:id="messageArea" editable="false" />
@@ -32,13 +29,13 @@
     </VBox>
     <VBox layoutX="588.0" layoutY="95.0" prefHeight="211.0" prefWidth="144.0">
         <children>
-            <Label text="Usernames:" style="-fx-background-color: #FFFFFF;"/>
+            <Label style="-fx-background-color: #FFFFFF;" text="Usernames:" />
             <TextArea fx:id="usernameList" editable="false" prefHeight="213.0" prefWidth="144.0" />
         </children>
     </VBox>
     <VBox layoutX="14.0" layoutY="142.0" prefHeight="153.0" prefWidth="144.0">
         <children>
-            <TextField text="Status" editable="false" />
+            <TextField editable="false" text="Status" />
             <TextArea prefHeight="200.0" prefWidth="200.0" />
         </children>
     </VBox>
