--- a/src/main/resources/dk/dtu/view/PopUpIP.fxml
+++ b/src/main/resources/dk/dtu/view/PopUpIP.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.StartController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.PopUpIPController">
    <AnchorPane prefHeight="200.0" prefWidth="200.0">
       <children>
          <VBox layoutX="226.0" layoutY="153.0">
@@ -26,7 +26,7 @@
          </Text>
          <Rectangle fx:id="joinGameRectangle" onMouseClicked="#JoinGameBasedOnIP" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="65.0" layoutX="115.0" layoutY="46.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
          <Text layoutX="192.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Join" />
-         <TextField layoutX="389.0" layoutY="110.0" promptText="Enter username" />
+         <TextField fx:id="UserNameField" layoutX="389.0" layoutY="110.0" promptText="Enter username" />
       </children>
    </AnchorPane>
 </VBox>
