--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -62,7 +62,7 @@
          <font>
             <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
          </font></Label>
-      <AnchorPane id="Anchor1" disable="true" layoutX="196.0" layoutY="14.0" onMouseClicked="#returnToMenu" prefHeight="30.0" prefWidth="47.0" visible="false">
+      <AnchorPane id="Anchor1" disable="true" layoutX="196.0" layoutY="14.0" onMouseClicked="#clickOnAnchorPanes" prefHeight="30.0" prefWidth="47.0" visible="false">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="44.0" stroke="BLACK" strokeType="INSIDE" width="47.0" />
          </children>
