--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<Pane prefHeight="521.0" prefWidth="746.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="dk.dtu.controller.AppController">
+<Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
 <children>
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" stroke="BLACK" strokeType="INSIDE" width="302.0" />
     <ImageView fx:id="background" fitHeight="521.0" fitWidth="746.0">
@@ -30,7 +30,7 @@
     <VBox layoutX="14.0" layoutY="142.0" prefHeight="153.0" prefWidth="144.0">
         <children>
             <TextField editable="false" text="Your Role:" />
-            <TextArea fx:id="roleBox" wrapText="true" prefHeight="200.0" prefWidth="200.0" />
+            <TextArea fx:id="roleBox" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
         </children>
     </VBox>
     <VBox layoutX="547.0" layoutY="403.0" prefHeight="118.0" prefWidth="199.0">
@@ -54,5 +54,7 @@
          <font>
             <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
          </font></Label>
+      <AnchorPane layoutX="229.0" layoutY="108.0" prefHeight="45.0" prefWidth="52.0" />
+      <Circle fill="DODGERBLUE" layoutX="424.0" layoutY="275.0" radius="45.0" stroke="BLACK" strokeType="INSIDE" />
 </children>
 </Pane>
